Nav => added Github link + items now are displayed as icons. Background => Added 3rd color to the background gradient

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       }
     </style>
   </head>
-  <body class="bg-emerald-700">
+  <body class="bg-teal-700">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx" defer></script>
     <noscript>
