Added meta tag description

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, viewport-fit=cover"
     />
+    <meta
+      name="description"
+      content="Kandiction is a quick-reference resource for Kanji characters,
+    offering information on meanings, readings, stroke order, and JLPT
+    levels."
+    />
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
       // MIT License
