--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       }
     </style>
   </head>
-  <body class="bg-teal-700">
+  <body class="bg-teal-700 dark:bg-gray-900">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx" defer></script>
     <noscript>
